# CarInfotainment

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
CarInfotainment/: qmldir
backend/: multimediacontroller.cpp  multimediacontroller.h
backend/HardwareControllers/: clockcontroller.cpp  clockcontroller.h  coolingsystemcontroller.cpp  coolingsystemcontroller.h  lockcontroller.cpp  lockcontroller.h  soundcontroller.cpp  soundcontroller.h
ui/BottomBar/: BottomBar.qml  CoolingSystem.qml  MultimediaBar.qml  Volume.qml
ui/LeftPanel/: LeftPanel.qml
ui/RightPanel/: MapModule.qml  RightPanel.qml  SearchBar.qml  SystemBar.qml
